[package]
name = "sshman"
version = "0.1.0"
edition = "2021"
authors = ["sshman"]
description = "Blazing-fast terminal SSH Session Manager"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
clap = { version = "4.5", features = ["derive"] }
fuzzy-matcher = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
shellexpand = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
